# Breakout

./: Breakout.sln  CMakeLists.txt  README  README.md
Breakout/: Breakout.csproj  Program.cs
Breakout/Properties/: AssemblyInfo.cs
res/: resource.rc  resource.res
src/: main.cpp
